--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NEXTAUTH_SECRET=01234567890123456789012345678901234567890123456789
 NEXTAUTH_URL=http://localhost:3000
+
+BACKEND_URL=http://localhost:8080
